2017-11-28 Sergey Kashyrin <ska@kiska.net>
	* Catch up with Release 2.2

2017-08-15 Sergey Kashyrin <ska@kiska.net>

	* cobc.cpp, typeck.cpp: fixes for VS2017.

2017-07-24 Sergey Kashyrin <ska@kiska.net>

	* codegen.cpp: allow recursion only for RECURSIVE programs.
	  extremely hard to find memory corruptions otherwise.

2017-06-16  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.am: added CODE_COVERAGE parts as provided by AX_CODE_COVERAGE
	* cobc.cpp, codegen.cpp, codeoptim.cpp, error.cpp, field.cpp, pplex.l,
	  tree.cpp, typeck.cpp: surrounded exception ABORTs that cannot be tested
	  by LCOV_EXCP markers

2017-06-14 Sergey Kashyrin <ska@kiska.net>

	* scanner.l: small declaration rearrangement as some g++ version (zLinux Red Hat) are barking.
	* cobc.cpp: fixed some weird listing bugs.

2017-04-27 Sergey Kashyrin <ska@kiska.net>

	* All fixes/updates of 2.0 main branch up to 2017-04-27 are retrofitted.
	* parser.y: Fix for CALL-CONVENTION (was broken)
	* codegen.cpp: Using CB_CONV_OPT_LINK if we want to suppress generation of the prototype
	  (as it could conflict with a system headers). Also we might use that on AS400 for
	  extern "OS" call convention.

2017-04-24 Sergey Kashyrin <ska@kiska.net>

	* All fixes/updates of 2.0 main branch up to 2017-03-31 are retrofitted.
	* It does not make sense to repeat all of that here, as the dates are different
	* Please refer to the ChangeLog of the main 2.0 branch

2016-12-20 Sergey Kashyrin <ska@kiska.net>

	* codegen.cpp (output_long_integer): Bug fix. Use names for INDEXes

2015-11-25 Sergey Kashyrin <ska@kiska.net>

	* codegen.cpp (output_integer): cast program-pointer to unsigned char *,
	  not to void *

2015-11-25 Sergey Kashyrin <ska@kiska.net> Fix for Bug #152 according 2015-05-06  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* codegen.cpp: fixed CALL after physical CANCEL
	  by moving physical_cancel (defined in call.cpp) to cobglobptr->cob_physical_cancel