@@ -107,7 +107,7 @@ relax-syntax-checks:		no
 perform-osvs:			yes
 
 # Compute intermediate decimal results like IBM OSVS
-arithmetic-osvs:		yes
+arithmetic-osvs:		no
 
 # MOVE like IBM (mvc); left to right, byte by byte
 move-ibm:		yes
