@@ -31,6 +31,10 @@
 # ignored if GnuCOBOL uses that word as a reserved word.
 #   Entries of the form word-1=word-2 define word-1 as an alias for default
 # reserved word word-2. No spaces are allowed around the equal sign.
+not-reserved:	PRIORITY
+not-reserved:   NOTHING
+not-reserved:	ATTRIBUTES
+not-reserved:	CHAR
 reserved:	ACCEPT
 reserved:	ACCESS
 reserved:	ADD
@@ -57,7 +61,6 @@ reserved:	ASCENDING
 reserved:	ASSIGN
 reserved:	AT
 reserved:	ATTRIBUTE
-reserved:	ATTRIBUTES
 reserved:	AUTHOR
 reserved:	BASIS
 reserved:	BEFORE
@@ -77,7 +80,6 @@ reserved:	CBL
 reserved:	CD
 reserved:	CF
 reserved:	CH
-reserved:	CHAR
 reserved:	CHAR-VARYING
 reserved:	CHARACTER
 reserved:	CHARACTERS
