@@ -1,3 +1,7 @@
+2018-07-12 Sergey Kashyrin <ska@kiska.net>
+	* common.cpp: Fix for SYSTEM
+	* common.h: revealing more types as a typedef for plain C.
+
 2018-01-02 Sergey Kashyrin <ska@kiska.net>
 	* Fix for cob_get_current_date_and_time_from_os
 	*  and functions LOCALE-DATE, LOCALE-TIME
